# MesoGen

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build-gcc.sh  build-mingw.bat  build-msvc15.bat  build-msvc16.bat  index.html  style.css
.github/workflows/: cmake.yml
cmake/: utils.cmake
share/samples/: dress.blend  dress.blend1  dress.mtl  dress.scene.mtl  imgui.ini  limitation1.json  limitation2.json  ring0.mtl  sig23_ff01.json  suggestion-bug01_lamp-sub2.json  tileset-basket-video.json  tileset-torus-variant.json  tileset.25d.json  tileset.braid3.json  tileset.braid3b.json  tileset.braid3b_color.json  tileset.color1.json  tileset.cross0.json  tileset.cross0p.json  tileset.cross1.json  tileset.cross1b.json  tileset.cross1b_color.json  tileset.cross2.json  tileset.cross3.json  tileset.cross4_color.json  tileset.door0.json  tileset.jewel.json  tileset.json  tileset.lampC.json  tileset.lampC2.json  tileset.lampC2_color.json  tileset.lampC3.json  tileset.lampC3_color.json  tileset.lampC3_color2.json  tileset.lampC3b.json  tileset.lampC3b_color2.json  tileset.lampC4_color.json  tileset.lampC_color.json  tileset.lampD.json  tileset.lampD2.json  (+57 more)
share/samples/test/: tileset.osier2e.json  tileset01.25d.json  (+3 more)
share/scripts/: blender_export_transform_matrix.py
share/shaders/: brush.frag.glsl  brush.vert.glsl  build-sweep-control-points.comp.glsl  build-sweep-vao.comp.glsl  build-unit-sweep-control-points.comp.glsl  deferred-rendering-pbr-maps.frag.glsl  deferred-rendering-pbr-maps.vert.glsl  deferred-rendering.frag.glsl  deform-sweep-vao.comp.glsl  mesh.frag.glsl  mesh.vert.glsl  mesostructure-export-mvc.comp.glsl  mesostructure-export.comp.glsl  mesostructure-tile-inner-geometry.frag.glsl  mesostructure-tile-inner-geometry.vert.glsl  mesostructure-tile-mesh-mvc.frag.glsl  mesostructure-tile-mesh-mvc.vert.glsl  mesostructure-tile-mesh.frag.glsl  mesostructure-tile-mesh.vert.glsl  mesostructure-tile-wireframe.frag.glsl  mesostructure-tile-wireframe.vert.glsl  profiles.frag.glsl  profiles.vert.glsl  shaded-mesh.frag.glsl  shaded-mesh.vert.glsl  tile25d-paths.frag.glsl  tile25d-paths.vert.glsl
src/: CMakeLists.txt
src/Augen/: CMakeLists.txt  Camera.cpp  Camera.h  ColorLayerInfo.h  DrawCall.cpp  DrawCall.h  Framebuffer.cpp  Framebuffer.h  GlobalTimer.cpp  GlobalTimer.h  GroupObject.cpp  GroupObject.h  Logger.cpp  Logger.h  NonCopyable.h  OpenGL  Ray.cpp  Ray.h  ReflectionAttributes.h  RenderTarget.cpp  RenderTarget.h  RuntimeObject.h  ScopedFramebufferOverride.h  Shader.cpp  Shader.h  ShaderPool.cpp  ShaderPool.h  ShaderPreprocessor.cpp  ShaderPreprocessor.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TinyTimer.h  TurntableCamera.cpp  TurntableCamera.h
src/Augen/Ui/: BaseApp.cpp  BaseApp.h  Dialog.h  Window.cpp  Window.h
src/Augen/utils/: debug.cpp  debug.h  fileutils.cpp  fileutils.h  guiutils.cpp  guiutils.h  macros.h  reflutils.cpp  reflutils.h  streamutils.h  strutils.cpp  strutils.h
src/GpuCage/: CMakeLists.txt  Scene.cpp  Scene.h  main.cpp
src/GpuCage/Ui/: App.cpp  App.h  GlobalTimerDialog.cpp  GlobalTimerDialog.h  SceneDialog.cpp  SceneDialog.h
src/GpuCage/utils/: objutils.cpp  objutils.h  streamutils.h
src/MesostructureGenerator/: BMesh.cpp  BMesh.h  BMeshIo.cpp  BMeshIo.h  Bezier.cpp  Bezier.h  CMakeLists.txt  CsgCompiler.cpp  CsgCompiler.h  CsgEngine.cpp  CsgEngine.h  DeferredRendering.cpp  DeferredRendering.h  FileRenderer.cpp  FileRenderer.h  MacrosurfaceData.cpp  MacrosurfaceData.h  MacrosurfaceRenderer.cpp  MacrosurfaceRenderer.h  MesostructureData.cpp  MesostructureData.h  MesostructureExporter.cpp  MesostructureExporter.h  MesostructureMvcRenderer.cpp  MesostructureMvcRenderer.h  MesostructureRenderOptions.h  MesostructureRenderer.cpp  MesostructureRenderer.h  Model.cpp  Model.h  MvcDeformer.cpp  MvcDeformer.h  OutputObject.cpp  OutputObject.h  QuadObject.cpp  QuadObject.h  Serialization.cpp  Serialization.h  Ssbo.cpp  Ssbo.h  (+26 more)
src/MesostructureGenerator/Serialization/: SerializationModel.cpp  SerializationModel.h  SerializationScene.cpp  SerializationScene.h
src/MesostructureGenerator/Ui/: App.cpp  App.h  GlobalTimerDialog.cpp  GlobalTimerDialog.h  HelpDialog.cpp  HelpDialog.h  MacrosurfaceDialog.cpp  MacrosurfaceDialog.h  MacrosurfaceRendererDialog.cpp  MacrosurfaceRendererDialog.h  MesostructureExporterDialog.cpp  MesostructureExporterDialog.h  MesostructureRendererDialog.cpp  MesostructureRendererDialog.h  ModelDialog.cpp  ModelDialog.h  OutputDialog.cpp  OutputDialog.h  RenderDialog.cpp  RenderDialog.h  SimpleDialog.cpp  SimpleDialog.h  TilesetEditorDialog.cpp  TilesetEditorDialog.h  TilesetRendererDialog.cpp  TilesetRendererDialog.h  TilingSolverDialog.cpp  TilingSolverDialog.h  TilingSolverRendererDialog.cpp  TilingSolverRendererDialog.h
src/MesostructureGenerator/utils/: glutils.h  miscutils.h
src/libwfc/: CMakeLists.txt  FastTileSuperposition.h  MeshSlotTopology.h  Ruleset.h  SlotTopology.h  Solver.h  TileSuperposition.h  libwfc.cpp  libwfc.h  ndvector.h
tests/: CMakeLists.txt  batch_measure_stats.py  batch_test_suggestion.py  check_tile_suggestion.py  test-augen.cpp  test-libwfc-fast-superposition.cpp  test-libwfc.cpp  test-mesh-based-slot-topology.cpp  test-tile-suggestion.cpp  test-tiledag25d.cpp  test-tiledag2d.cpp  test-tileset04.cpp  test-tileset05.cpp  test-tileset06.cpp
tests/data/: tileset.failure0.json  tileset.failure0_shuffled.json  tileset.failure1.json  tileset.osier0.json  tileset.osier00.json  tileset.osier000.json  tileset.osier0_shuffled.json  tileset.osier2b.json
tests/data/random-tilesets/: tileset.random0000.json  tileset.random0001.json  tileset.random0002.json  tileset.random0003.json  tileset.random0004.json  tileset.random0005.json  tileset.random0006.json  tileset.random0007.json  tileset.random0008.json  tileset.random0009.json  tileset.random0010.json  tileset.random0011.json  tileset.random0012.json  tileset.random0013.json  tileset.random0014.json  tileset.random0015.json  tileset.random0016.json  tileset.random0017.json  tileset.random0018.json  tileset.random0019.json
(+26 files in other folders)
